Сетки и микросетки для каталога в мобильной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,13 +17,13 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="main-navigation__link text text--menu" href="index.html">Главная</a>
-            </li>
-            <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link text text--menu">Каталог продукции</a>
+              <a class="main-navigation__link text" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link text text--menu" href="form.html">Подбор программы</a>
+              <a class="main-navigation__link text main-navigation__link--active">Каталог продукции</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link text" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -34,144 +34,158 @@
         <h2 class="catalog-main__title text text--title">Каталог продукции</h2>
         <ul class="catalog-main__list">
           <li class="catalog-main__item">
-            <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">500 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Курица</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">700 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog-main__image" src="#" width="140" height="140" alt="Фото продукта">
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
+              <table class="catalog-main__info" border="0">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--value">500 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--value">Курица</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">1000 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Курица</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">1000 Р.</td>
-              </tr>
-            </table>
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
+              <table class="catalog-main__info">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell">1000 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell">Курица</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">500 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Рыба</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">700 Р.</td>
-              </tr>
-            </table>
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
+              <table class="catalog-main__info">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell">500 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell">Рыба</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">1000 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Рыба</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">1000 Р.</td>
-              </tr>
-            </table>
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
+              <table class="catalog-main__info">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell">1000 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell">Рыба</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 500 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">500 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Гречка</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">400 Р.</td>
-              </tr>
-            </table>
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 500 г</h3>
+              <table class="catalog-main__info">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell">500 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell">Гречка</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">400 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 1000 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">1000 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Гречка</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">700 Р.</td>
-              </tr>
-            </table>
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 1000 г</h3>
+              <table class="catalog-main__info">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell">1000 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell">Гречка</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
           </li>
           <li class="catalog-main__item">
             <img class="catalog-main__image" src="#" width="10" height="10" alt="Фото продукта">
-            <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
-            <table class="catalog-main__info">
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Объём</td>
-                <td class="catalog-main__info-cell">500 г</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Вкус</td>
-                <td class="catalog-main__info-cell">Рис</td>
-              </tr>
-              <tr class="catalog-main__info-row">
-                <td class="catalog-main__info-cell">Цена</td>
-                <td class="catalog-main__info-cell">500 Р.</td>
-              </tr>
-            </table>
+            <div class="catalog-main__description">
+              <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
+              <table class="catalog-main__info">
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Объём</td>
+                  <td class="catalog-main__info-cell">500 г</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Вкус</td>
+                  <td class="catalog-main__info-cell">Рис</td>
+                </tr>
+                <tr class="catalog-main__info-row">
+                  <td class="catalog-main__info-cell">Цена</td>
+                  <td class="catalog-main__info-cell">500 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog-main__button button text text--bigger" href="#">Заказать</a>
+          </li>
+          <li class="catalog-main__item catalog-main__item--show-more show-more">
+            <h3 class="show-more__title text text--bigger">Показать еще 100500 товаров</h3>
+            <p class="show-more__text">На самом деле вкусов гораздо больше!</p>
+            <button class="show-more__button button text text--bigger" type="button">Показать все</button>
           </li>
         </ul>
-      </section>
-      <section class="show-more">
-        <h3 class="show-more__title text text--bigger">Показать еще 100500 товаров</h3>
-        <p class="show-more__text">На самом деле вкусов гораздо больше!</p>
-        <button class="show-more__button button" type="button">Показать все</button>
       </section>
       <section class="catalog-additional">
         <h2 class="catalog-additional__title text text--subtitle">Дополнительные товары</h2>
@@ -217,11 +231,11 @@
             <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
           </li>
         </ul>
-      </section>
-      <section class="present">
-        <div class="present-wrapper">
-          <h2 class="visually-hidden">Подарок</h2>
-          <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="catalog-additional__present present">
+          <div class="present-wrapper">
+            <h2 class="visually-hidden">Подарок</h2>
+            <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </div>
       </section>
     </main>
@@ -229,7 +243,10 @@
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="contacts__adress">
+          <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__city">Санкт-Петербург</p>
+        </div>
       </div>
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
