--- a/source/form.html
+++ b/source/form.html
@@ -17,13 +17,13 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="main-navigation__link text text--menu" href="index.html">Главная</a>
+              <a class="main-navigation__link text" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link text text--menu" href="catalog.html">Каталог продукции</a>
+              <a class="main-navigation__link text" href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link text text--menu">Подбор программы</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link text main-navigation__link--active">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -93,7 +93,10 @@
       <div class="contacts page-footer__contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="contacts__adress">
+          <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__city">Санкт-Петербург</p>
+        </div>
       </div>
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
