--- a/source/form.html
+++ b/source/form.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
-      </a>
-      <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
+      <div class="page-header__top">
+        <a class="page-header__logo" href="#">
+          <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
+        </a>
+        <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
+        <button class="page-header__toggle" type="button">Открыть меню</button>
+      </div>
       <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button">Открыть меню</button>
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
