--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header page-header--index">
       <div class="page-header__top">
         <a class="page-header__logo" href="#">
           <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
